fix z-index for darken, add email functionality

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -15,7 +15,7 @@
   top: 20%;
   background-color: white;
   border: solid 2px gray;
-  z-index: 1;
+  z-index: 200002;
 }
 
 .darken {
@@ -25,6 +25,7 @@
   bottom: 0;
   top: 0;
   background-color: rgba(0,0,0,0.6);
+  z-index: 200001;
 }
 
 /* Mobile - 360px */
